--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,4 +1,35 @@
 /**index.wxss**/
 page {
   height: 100%;
+  background-color: #6e4038;
+}
+
+.card-grid {
+  margin-top: 0;
+  display: -webkit-flex;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-evenly;
+  flex-wrap: nowrap;
+  width: 100%;
+  padding-top: 30rpx;
+  padding-bottom: 20rpx;
+}
+
+.grid-item{
+  flex: 0 0 auto;
+  width: 23%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 10rpx;
+}
+
+.card-image{
+  width: 100%;
+  object-fit: cover;
+}
+
+.footer{
+  
 }
