--- a/app.wxss
+++ b/app.wxss
@@ -1,10 +1,5 @@
 /**app.wxss**/
 .container {
   width: 100%;
-  min-height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  box-sizing: border-box;
+  height: 100%;
 } 
