--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -2,10 +2,21 @@
 
 <view class="container">
   <view class="card-grid">
-    <view wx:for="{{CONFIG}}" wx:for-item="card" wx:for-index="idx" class="grid-item">
-      <image class="card-image" src="{{URL_PREFIX + card.titleimage}}" />
+    <view class="grid-item" wx:for="{{CONFIG}}" wx:for-item="card" bindtap="bindGetTicket" data-index='{{index}}'>
+      <image class="card-image" src="{{URL_PREFIX + card.titleimage}}" mode="widthFix"/>
     </view>
   </view>
   <view class="footer">
+    <image class="footer" src="{{URL_PREFIX + 'footer.jpg'}}" mode="widthFix"/>
   </view>
+  <cover-view class="cover-view" wx:if="{{choose}}">
+    <cover-image class="cover-image" src="{{URL_PREFIX + choose}}" mode="widthFix"/>
+    <cover-view class="button-view left">
+      <button class="button" bindtap='bindReChoose' style="padding: 2rpx; width: 100%;">再次抽取</button>
+    </cover-view>
+    <cover-view class="button-view right">
+      <button class="button" wx:if="{{isauth}}" bindtap='export' disabled='{{exportbtnDis}}' style="padding: 2rpx; width: 100%;">{{exportbtnText}}</button>
+      <button class="button" wx:if="{{!isauth}}" open-type="openSetting" bindtap='openSetting' style="padding: 2rpx; width: 100%;">请授权</button>
+    </cover-view>
+  </cover-view>
 </view>
